# wheel-filename

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wheel_filename.py
.github/workflows/: test.yml
src/wheel_filename/: __init__.py  __main__.py
test/: test_class.py  test_main.py  test_parse.py  test_tag_triples.py
wheel_filename/: __init__.py
