[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wheel-filename"
dynamic = ["version"]
description = "Parse wheel filenames"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "wheel-filename@varonathe.org" }
]

keywords = [
    "filename",
    "pep427",
    "wheel",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed",
]

dependencies = []

[project.scripts]
wheel-filename = "wheel_filename.__main__:main"

[project.urls]
"Source Code" = "https://github.com/wheelodex/wheel-filename"
"Bug Tracker" = "https://github.com/wheelodex/wheel-filename/issues"

[tool.hatch.version]
path = "src/wheel_filename/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
