[aliases]
make = sdist bdist_wheel

[metadata]
name = wheel-filename
#version = # Set in setup.py
description = Parse wheel filenames
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheel-filename@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/wheel-filename

keywords =
    filename
    pep427
    wheel

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/wheel-filename
    Bug Tracker = https://github.com/jwodder/wheel-filename/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = wheel_filename
python_requires = ~= 3.5
install_requires =
    attrs >= 18.1
