[aliases]
make = sdist bdist_wheel

[metadata]
name = wheel-filename
version = attr:wheel_filename.__version__
description = Parse wheel filenames
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = wheel-filename@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/wheel-filename

keywords =
    filename
    pep427
    wheel

classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Topic :: System :: Software Distribution
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/wheel-filename
    Bug Tracker = https://github.com/jwodder/wheel-filename/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
packages = find:
include_package_data = True
python_requires = ~= 3.6
install_requires =

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
no_error_summary = True
show_traceback = True
